--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
     "normalize.css": "^8.0.1",
