--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
@@ -11,7 +14,8 @@
     "morgan": "^1.10.0",
     "normalize.css": "^8.0.1",
     "react-icons": "^4.7.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   },
   "name": "jobify",
   "description": "Project in Action - [Jobify](https://www.jobify.live/)",
