--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URL=mongodb+srv://bvidal1001:4surem4n@nodeexpressprojects.e99vs45.mongodb.net/Jobify?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://<username>:<password>@nodeexpressprojects.e99vs45.mongodb.net/Jobify?retryWrites=true&w=majority
 JWT_SECRET=UjXn2r5u8x/A?D(G+KaPdSgVkYp3s6v9
 JWT_LIFETIME=1d
